# autora-experimentalist-falsification

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  mkdocs_pooler.yml  mkdocs_sampler.yml  pyproject.toml
.github/workflows/: test-pytest.yml
docs/: Basic Usage.ipynb  basic-usage-pooler.ipynb  example.ipynb  index-pooler.md  index-sampler.md  index.md  quickstart-pooler.md  quickstart.md
docs/pooler/: Basic Usage.ipynb  index-pooler.md  index.md  quickstart.md
docs/sampler/: Basic Usage.ipynb  index-sampler.md  index.md
mkdocs/: base.yml  gen_ref_pages.py
src/autora/experimentalist/falsification/: __init__.py  utils.py
src/autora/experimentalist/pooler/falsification/: __init__.py
src/autora/experimentalist/sampler/example/: __init__.py
src/autora/experimentalist/sampler/falsification/: __init__.py
tests/: README.md  test_exp_falsification_pooler.py  test_exp_falsification_sampler.py  test_exp_sampler_example.py
