[project]
# UPDATE THIS BEFORE PUBLISHING
name = "autora-experimentalist-template"
description = "AutoRA Experimentalist Sampler Template"
authors = [{ name = "Max Mustermann", email = "max@mustermann.de" }]
version = "0.1.0"

readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.8.10,<3.11"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/AutoResearch/autora-theorist-template"
documentation = "https://autoresearch.github.io/autora/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
