[project]
# UPDATE THIS BEFORE PUBLISHING
name = "autora-experimentalist-falsification"
description = "AutoRA Falsification Experimentalist"
authors = [{ name = "Sebastian Musslick", email = "sebastian@musslick.de" }]
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE"}

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core>=3.1.0",
    "torch",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/AutoResearch/autora-experimentalist-falsification"
documentation = "https://autoresearch.github.io/autora/"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
